--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Calendar Widget</title>
-    <link rel="stylesheet" href="/css/styles.css"/>
+    <link rel="stylesheet" href="css/styles.css"/>
     <link href="http://fonts.googleapis.com/css?family=PT+Sans:400,700" rel='stylesheet' />
 
   </head>
@@ -11,8 +11,15 @@
     <div id="cal">
     </div>
 
-    <script type="text/javascript"
-            src="js/calendar.js">
-    </script>
+    <form id="jsonFile" name="jsonFile" enctype="multipart/form-data" method="post">
+      <fieldset>
+        <h2>Select JSON file to load:</h2>
+         <input type='file' id='fileinput'>
+         <input type='button' id='btnLoad' value='Load' onclick='CW.loadFile();'>
+      </fieldset>
+    </form>
+
+    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="js/calendar.js"></script>
   </body>
 </html>
